Use java base64 instead sum base64
Sun BASE64Encoder and Decoder are deprecated in the future
https://stackoverflow.com/a/36578709