@@ -21,8 +21,7 @@ import java.security.NoSuchAlgorithmException;
 import java.sql.*;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
 
 import l1j.server.Config;
 import l1j.server.L1DatabaseFactory;
@@ -53,7 +52,7 @@ public class Logins {
 			pstm.setString(1, account);
 			rs = pstm.executeQuery();
 			if (rs.next()) {
-				abyte2 = new BASE64Decoder().decodeBuffer(rs.getString(1));
+				abyte2 = Base64.getDecoder().decode(rs.getString(1));
 				_log.fine("account exists");
 			}
 			SQLUtil.close(rs);
@@ -66,7 +65,7 @@ public class Logins {
 					pstm = con
 							.prepareStatement("INSERT INTO accounts SET login=?,password=?,lastactive=?,access_level=?,ip=?,host=?");
 					pstm.setString(1, account);
-					pstm.setString(2, new BASE64Encoder().encode(abyte1));
+					pstm.setString(2, Base64.getEncoder().encodeToString(abyte1));
 					pstm.setLong(3, 0L);
 					pstm.setInt(4, 0);
 					pstm.setString(5, ip);
